# sdlc-moe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE-MIT  MODELS.md  README.md  TODO.md  bench.py  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: ci.yml
config/: models.toml
config/profiles/: tier-base.toml  tier-extended.toml  tier-nano.toml  tier-standard.toml
scripts/: setup.ps1
sdlc_moe/: cli.py
sdlc_moe/hardware/: __init__.py  probe.py
sdlc_moe/ollama/: __init__.py  client.py
sdlc_moe/orchestrator/: __init__.py  classifier.py  context_bus.py  router.py
src/sdlc_moe/: __init__.py  cli.py
src/sdlc_moe/hardware/: probe.py
src/sdlc_moe/i18n/: __init__.py  en.toml  hi.toml  id.toml  pt_br.toml
src/sdlc_moe/ollama/: client.py
src/sdlc_moe/orchestrator/: classifier.py  context_bus.py  router.py
tests/: bench.py  test_asyncio.py
tests/routing/: test_classifier.py
